change the command
docker-compose up is old way, so I replaced it to docker compose up

Signed-off-by: 坂田悠真 <82935442+sakata501@users.noreply.github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
         
     - name: Deploy to server
       run: |
-        ssh -o StrictHostKeyChecking=no yuma@meg.local "cd desiccator-monitor && git pull && docker-compose up -d"
+        ssh -o StrictHostKeyChecking=no yuma@meg.local "cd desiccator-monitor && git pull && docker compose up -d"
