--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up SSH key
       uses: webfactory/ssh-agent@v0.5.3
       with:
-        ssh-private-key: ${{ secrets.switchbot }}
+        ssh-private-key: ${{ secrets.SWITCHBOT }}
         
     - name: Deploy to server
       run: |
