--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,23 @@ jobs:
       env:
         SSH_KEY: ${{ secrets.SWITCHBOT }}  # GitHub Secretsに保存されたSSH秘密鍵
 
+    - name: Debug SSH key and host
+      run: |
+        echo "SSH_KEY: $SSH_KEY"
+        echo "HOST: $HOST"
+      env:
+        HOST: ${{ secrets.HOST }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
+
     - name: Add SSH host to known hosts
       run: |
-        ssh-keyscan -H $HOST >> ~/.ssh/known_hosts
+        ssh-keyscan $HOST >> ~/.ssh/known_hosts
+        cat ~/.ssh/known_hosts  # known_hostsに追加されたホストの公開鍵を確認する
+      env:
+        HOST: ${{ secrets.HOST }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
+
+    - name: Test SSH connection
+      run: |
+        ssh -o "StrictHostKeyChecking=no" -i ~/.ssh/id_rsa $HOST "hostname"
       env:
         HOST: ${{ secrets.HOST }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
 
@@ -42,4 +56,3 @@ jobs:
         "
       env:
         HOST: ${{ secrets.HOST }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
-
