--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: SSH and Docker Deployment
-# 手動実行用のトリガー
+
 on:
   push:
     branches:
@@ -17,42 +17,27 @@ jobs:
     - name: Set up SSH key
       run: |
         mkdir -p ~/.ssh && chmod 700 ~/.ssh
-        echo "$SSH_KEY" > ~/.ssh/id_ed25519 && chmod 600 ~/.ssh/id_ed25519
-      env:
-        SSH_KEY: ${{ secrets.switchbot }}  # GitHub Secretsに保存されたSSH秘密鍵
-
-    - name: Debug SSH key and host
-      run: |
-        echo "SSH_KEY: $SSH_KEY"
-        echo "HOST: $HOST"
-      env:
-        HOST: ${{ secrets.host }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
+        echo "-----BEGIN OPENSSH PRIVATE KEY-----
+        b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW
+        QyNTUxOQAAACAXr82M/50dEMgcDxZzLreoR/myIXBMR/ifNZIjL83f0gAAAJhSVaK3UlWi
+        twAAAAtzc2gtZWQyNTUxOQAAACAXr82M/50dEMgcDxZzLreoR/myIXBMR/ifNZIjL83f0g
+        AAAECqE638J8oZILOkVQ8tg+MqX+F6YEy4jSpoUO5qNesUhxevzYz/nR0QyBwPFnMut6hH
+        +bIhcExH+J81kiMvzd/SAAAAEnNrdHltMTUzQGdtYWlsLmNvbQECAw==
+        -----END OPENSSH PRIVATE KEY-----" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
 
     - name: Add SSH host to known hosts
       run: |
-        ssh-keyscan $HOST >> ~/.ssh/known_hosts
-        cat ~/.ssh/authorized_keys  # known_hostsに追加されたホストの公開鍵を確認する
-      env:
-        HOST: ${{ secrets.host }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
-
-    - name: Test SSH connection
-      run: |
-        ssh -o "StrictHostKeyChecking=no" -i ~/.ssh/id_ed25519 $HOST "hostname"
-      env:
-        HOST: ${{ secrets.host }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
+        ssh-keyscan -H 10.30.0.111 >> ~/.ssh/known_hosts  # 直接IPアドレスを指定
 
     - name: Pull latest changes and deploy with Docker
       run: |
-        ssh -o "StrictHostKeyChecking=no" -i ~/.ssh/id_ed25519 $HOST "
+        ssh -o "StrictHostKeyChecking=no" -i ~/.ssh/id_rsa yuma@10.30.0.111 "
           cd desiccator-monitor && git pull && docker compose up -d
         "
-      env:
-        HOST: ${{ secrets.HOST }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
 
     - name: Check the status of Docker containers
       run: |
-        ssh -o "StrictHostKeyChecking=no" -i ~/.ssh/id_ed25519 $HOST "
+        ssh -o "StrictHostKeyChecking=no" -i ~/.ssh/id_rsa yuma@10.30.0.111 "
           docker ps
         "
-      env:
-        HOST: ${{ secrets.HOST }}  # GitHub Secretsに保存されたサーバーのホスト名またはIP
