--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,4 @@ jobs:
 
       - name: Deploy via SSH
         run: |
-          ssh -T -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ vars.SSH_USER }}@${{ vars.SSH_HOST }} << 'EOF'
-            cd desiccator-monitor
-            git pull origin main
-            docker compose up -d
-          EOF
+          ssh -T -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no yuma@10.30.0.111 "cd desiccator-monitor && git pull origin main && docker compose up -d"
