--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,24 +7,18 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Test SSH connectivity
+      - name: Pull latest changes
         run: |
-          nc -zv 10.30.0.111 22
-    
-      - name: Set up SSH
+          cd ~/desiccator-monitor
+          git pull origin main
+
+      - name: Restart Docker containers
         run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          rm -f ~/.ssh/known_hosts
-          ssh-keyscan -H 10.30.0.111 >> ~/.ssh/known_hosts
-  
-      - name: Deploy via SSH
-        run: |
-          ssh -vvv -T -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no yuma@10.30.0.111 "echo 'Connected successfully' && cd desiccator-monitor && git pull origin main && docker compose up -d"
+          cd ~/desiccator-monitor
+          docker compose up -d --build
